Fix: Ajout 100dvh pour Safari iOS et configuration SSL\ - Ajout min-height: 100dvh dans html et body pour fix Safari iOS - Installation certificat SSL Let's Encrypt - Configuration Nginx pour HTTPS - Ajout volume Docker pour dossier img - Fix z-index boutons mobile (dark mode, scroll-to-top, progress bar) - Ajout JavaScript pour fix position fixed mobile

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
       - "8081:80"
     volumes:
       - ./public/uploads:/var/www/html/public/uploads
+      - ./public/img:/var/www/html/public/img
       - ./.env:/var/www/html/.env:ro
     environment:
       - APP_ENV=production
