--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -7,6 +7,10 @@ server {
     error_log /var/log/nginx/error.log;
     access_log /var/log/nginx/access.log;
 
+    # Temp paths for uploads
+    client_body_temp_path /var/lib/nginx/tmp/client_body 1 2;
+    client_max_body_size 20M;
+
     # Charset
     charset utf-8;
 
