--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -23,7 +23,14 @@ http {
     tcp_nodelay on;
     keepalive_timeout 65;
     types_hash_max_size 2048;
-    client_max_body_size 10M;
+    client_max_body_size 20M;
+
+    # Temp paths with proper permissions
+    client_body_temp_path /var/lib/nginx/tmp/client_body 1 2;
+    proxy_temp_path /var/lib/nginx/tmp/proxy 1 2;
+    fastcgi_temp_path /var/lib/nginx/tmp/fastcgi 1 2;
+    uwsgi_temp_path /var/lib/nginx/tmp/uwsgi 1 2;
+    scgi_temp_path /var/lib/nginx/tmp/scgi 1 2;
 
     # Gzip compression
     gzip on;
