--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -26,11 +26,11 @@ http {
     client_max_body_size 20M;
 
     # Temp paths with proper permissions
-    client_body_temp_path /var/lib/nginx/tmp/client_body 1 2;
-    proxy_temp_path /var/lib/nginx/tmp/proxy 1 2;
-    fastcgi_temp_path /var/lib/nginx/tmp/fastcgi 1 2;
-    uwsgi_temp_path /var/lib/nginx/tmp/uwsgi 1 2;
-    scgi_temp_path /var/lib/nginx/tmp/scgi 1 2;
+    client_body_temp_path /var/lib/nginx/tmp/client_body;
+    proxy_temp_path /var/lib/nginx/tmp/proxy;
+    fastcgi_temp_path /var/lib/nginx/tmp/fastcgi;
+    uwsgi_temp_path /var/lib/nginx/tmp/uwsgi;
+    scgi_temp_path /var/lib/nginx/tmp/scgi;
 
     # Gzip compression
     gzip on;
