--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -25,12 +25,12 @@ http {
     types_hash_max_size 2048;
     client_max_body_size 20M;
 
-    # Temp paths with proper permissions
-    client_body_temp_path /var/lib/nginx/tmp/client_body;
-    proxy_temp_path /var/lib/nginx/tmp/proxy;
-    fastcgi_temp_path /var/lib/nginx/tmp/fastcgi;
-    uwsgi_temp_path /var/lib/nginx/tmp/uwsgi;
-    scgi_temp_path /var/lib/nginx/tmp/scgi;
+    # Temp paths - utiliser /tmp qui est toujours accessible en écriture
+    client_body_temp_path /tmp/nginx_client_body;
+    proxy_temp_path /tmp/nginx_proxy;
+    fastcgi_temp_path /tmp/nginx_fastcgi;
+    uwsgi_temp_path /tmp/nginx_uwsgi;
+    scgi_temp_path /tmp/nginx_scgi;
 
     # Gzip compression
     gzip on;
