--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,8 @@ services:
     volumes:
       - ./public/uploads:/var/www/html/public/uploads
       - ./public/img:/var/www/html/public/img
+      - ./public/css:/var/www/html/public/css
+      - ./public/js:/var/www/html/public/js
       - ./.env:/var/www/html/.env:ro
     environment:
       - APP_ENV=production
