--- a/.htaccess
+++ b/.htaccess
@@ -85,8 +85,8 @@ RedirectMatch 403 \.md$
     # Politique de référent
     Header set Referrer-Policy "strict-origin-when-cross-origin"
 
-    # CSP (Content Security Policy) - à ajuster selon vos besoins
-    # Header set Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline' fonts.googleapis.com; font-src 'self' fonts.gstatic.com;"
+    # CSP (Content Security Policy)
+    Header set Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' https://www.googletagmanager.com https://www.google-analytics.com https://cdnjs.cloudflare.com https://cdn.jsdelivr.net; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://cdnjs.cloudflare.com https://cdn.jsdelivr.net; font-src 'self' https://fonts.gstatic.com https://cdnjs.cloudflare.com https://cdn.jsdelivr.net data:; connect-src 'self' https://region1.google-analytics.com https://www.google-analytics.com https://analytics.google.com https://stats.g.doubleclick.net https://cdn.jsdelivr.net; img-src 'self' https://www.google-analytics.com https://ssl.gstatic.com https://www.gstatic.com data:;"
 </IfModule>
 
 # Compression Gzip
