Fix: augmenter limite upload nginx à 20MB

--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -4,6 +4,9 @@ server {
     root /var/www/html/public;
     index index.php index.html;
 
+    # Augmenter la limite de taille des uploads
+    client_max_body_size 20M;
+
     error_log /var/log/nginx/error.log;
     access_log /var/log/nginx/access.log;
 
